tests/ui/const-generics/const-param-type-depends-on-const-param.min.stderr
error[E0770]: the type of const parameters must not depend on other generic parameters
  --> $DIR/const-param-type-depends-on-const-param.rs:11:52
   |
LL | pub struct Dependent<const N: usize, const X: [u8; N]>([(); N]);
   |                                                    ^ the type must not depend on the parameter `N`

error[E0770]: the type of const parameters must not depend on other generic parameters
  --> $DIR/const-param-type-depends-on-const-param.rs:15:40
   |
LL | pub struct SelfDependent<const N: [u8; N]>;
   |                                        ^ the type must not depend on the parameter `N`

error: `[u8; N]` is forbidden as the type of a const generic parameter
  --> $DIR/const-param-type-depends-on-const-param.rs:11:47
   |
LL | pub struct Dependent<const N: usize, const X: [u8; N]>([(); N]);
   |                                               ^^^^^^^
   |
   = note: the only supported types are integers, `bool`, and `char`
help: add `#![feature(adt_const_params)]` to the crate attributes to enable more complex and user defined types
   |
LL + #![feature(adt_const_params)]
   |

error: `[u8; N]` is forbidden as the type of a const generic parameter
  --> $DIR/const-param-type-depends-on-const-param.rs:15:35
   |
LL | pub struct SelfDependent<const N: [u8; N]>;
   |                                   ^^^^^^^
   |
   = note: the only supported types are integers, `bool`, and `char`
help: add `#![feature(adt_const_params)]` to the crate attributes to enable more complex and user defined types
   |
LL + #![feature(adt_const_params)]
   |

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0770`.
